prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/invalid_type_hint_3.diag.txt
ERROR: Invalid type name 'Integer', did you mean 'int'?
testData/diagnostics/invalid_type_hint_3.nut:1:13

let a = @(x: Integer): Integer x * x
             ^------


